# robocup-cs839

./: .clang-format  ruff.toml  startup.sh  sync_time.sh
chtc/: submit_i.sh
chtc/job_configs/: job_i.sub
scripts/: start.sh
src/bhuman/: CMakeLists.txt  package.xml
src/bhuman/include/: SampleSet.h  UKFPose2D.h
src/bhuman/include/Math/: Boundary.h  Eigen.h  Geometry.h  Pose2f.h  Pose3f.h  Range.h  RotationMatrix.h  SE3Tools.h  SE3fWithCov.h
src/bhuman/include/MathBase/: Angle.h  Approx.h  BHMath.h  Constants.h  Covariance.h  Deviation.h  Eigen.h  EigenArrayExtensions.h  EigenMatrixBaseExtensions.h  GaussNewtonOptimizer.h  LeastSquares.h  MeanCalculator.h  NeumaierSum.h  Probabilistics.h  Random.h  RingBuffer.h  RingBufferWithSum.h  Rotation.h  UnscentedKalmanFilter.h
src/bhuman/include/Platform/: BHAssert.h  File.h  Memory.h  Semaphore.h  Thread.h
src/bhuman/include/Streaming/: AlignedMemory.h  AutoStreamable.h  Enum.h  EnumIndexedArray.h  Function.h  FunctionList.h  Global.h  InExpr.h  InOut.h  InStreams.h  MessageIDs.h  MessageQueue.h  OutStreams.h  Output.h  SimpleMap.h  Streamable.h  TypeInfo.h  TypeRegistry.h
src/bhuman/src/: UKFPose2D.cpp
src/bhuman/src/Math/: Geometry.cpp  RotationMatrix.cpp  SE3Tools.cpp  SE3fWithCov.cpp
src/bhuman/src/MathBase/: Covariance.cpp  LeastSquares.cpp  Random.cpp
src/bhuman/src/Platform/: BHAssert.cpp  File.cpp  Memory.cpp
src/bhuman/src/Streaming/: AlignedMemory.cpp  FunctionList.cpp  Global.cpp  InExpr.cpp  InOut.cpp  InStreams.cpp  MessageQueue.cpp  OutStreams.cpp  Output.cpp  SimpleMap.cpp  Streamable.cpp  TypeInfo.cpp  TypeRegistry.cpp
src/brain/: CMakeLists.txt  package.xml
src/brain/behavior_trees/: game.xml  game_goalie.xml  game_striker.xml  test.xml  test_localization.xml
src/brain/behavior_trees/subtrees/: subtree_auto_standup_and_locate.xml  subtree_cam_find_and_track_ball.xml  subtree_carrot_freekick.xml  subtree_carrot_goalie_play.xml  subtree_carrot_striker_play.xml  subtree_find_ball.xml  subtree_freekick_ready.xml  subtree_goalie_freekick_ready.xml  subtree_striker_freekick_ready.xml
src/brain/config/: brain.yaml  brain_r1.yaml  brain_r2.yaml  brain_r3.yaml  brain_sim.yaml
src/brain/include/: RoboCupGameControlData.h  SPLCoachMessage.h  brain.h  brain_communication.h  brain_config.h  brain_data.h  brain_log.h  brain_tree.h  joy_msg.h  locator.h  robot_client.h  self_localization.h  stablizer.h  team_communication_msg.h  types.h
src/brain/include/utils/: math.h  misc.h  print.h
src/brain/launch/: launch.py
src/brain/src/: brain.cpp  brain_communication.cpp  brain_config.cpp  brain_data.cpp  brain_log.cpp  brain_tree.cpp  joy_msg.cpp  locator.cpp  main.cpp  robot_client.cpp  self_localization.cpp
src/game_controller/include/: RoboCupGameControlData.h  SPLCoachMessage.h  SPLStandardMessage.h  game_controller_node.h
src/game_controller/launch/: launch.py
src/game_controller/src/: game_controller_node.cpp  main.cpp
src/interface/booster_interface/: package.xml
src/interface/vision_interface/msg/: Detections.msg
src/vision/config/: vision_r1.yaml  vision_r2.yaml  vision_r3.yaml  vision_sim.yaml
src/vision/include/booster_vision/: img_bridge.h  vision_log.h  vision_node.h
src/vision/launch/: launch.py
src/vision/src/: CMakeLists.txt  img_bridge.cpp  main.cpp  vision_log.cpp  vision_node.cpp
src/vision/src/base/: data_syncer.cpp  intrin.cpp  pointcloud_process.cpp  pose.cpp
src/vision/src/calibration/: CMakeLists.txt  board_detector.cpp  calibration.cpp  calibration_node.cpp
src/vision/src/model/: detector.cc
src/vision/src/pose_estimator/: pose_estimator.cpp
(+16 files in other folders)
